Java17 build works for me