@@ -3,6 +3,7 @@ swaggerSources {
   server {
     inputFile = file(tasks.getByPath(':openapi:buildOpenApi').openApiSource)
     code {
+      jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED'] // for Java 16+
       language = "spring"
       library = "spring-boot"
       outputDir = file(openapiOutputDir)
@@ -31,12 +32,6 @@ task copyOpenApiToResources(type: Copy) {
   rename { String filename -> "service_openapi.yaml" }
 }
 
-// For JVM 16+
-/*
-tasks.withType(GenerateSwaggerCode).all {
-  jvmArgs = ['--add-exports=java.base/java.util=ALL-UNNAMED']
-}
-*/
 // We depend on the copy to make sure the copy happens. The real dependency is
 // on the open api source generation
 generateSwaggerCodeServer.dependsOn(copyOpenApiToResources)
